[package]
name = "neerg"
version = "0.1.0"
authors = ["Alekos Filini <alekos.filini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { git = "https://github.com/bitcoindevkit/bdk.git", rev = "f7499cb" }
bip0039 = "^0.6"
env_logger = "0.7"
lazy_static = "1.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
tokio = { version = "0.2", features = ["macros", "rt-threaded", "blocking"] }

# FIXME: Waiting for https://github.com/elast0ny/wamp_async/pull/1
wamp_async = { git = "https://github.com/afilini/wamp_async.git", branch = "fix/support-f64-numbers" }

[profile.release]
opt-level = 'z'
lto = true
